src/objects/SOD_Address_Auth__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AuthID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AuthID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthToken__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AuthToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SOD_Address_Auth</label>
</CustomObject>